--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/throttler": "^5.1.1",
     "@prisma/client": "^5.8.1",
+    "@types/multer": "^2.0.0",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
