--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "start": "node dist/main",
     "start:dev": "nest start --watch",
     "build": "nest build",
-    "start:prod": "node dist/main",
+   "start:prod": "node dist/main.js"
 
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
