fix: railway start script and prisma deploy rati

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-DATABASE_URL="postgresql://rdam_user:rdam_password@postgres:5432/rdam_dev?schema=public"
+DATABASE_URL=postgresql://rdam_user:rdam_password@postgres:5432/rdam_dev?schema=public
 JWT_SECRET=dev-secret-muy-largo-1234567890-cambiar-en-produccion
 JWT_EXPIRATION=24h
 FRONTEND_URL=http://localhost:5173
@@ -12,5 +12,5 @@ SMTP_USER=test
 SMTP_PASS=test
 EMAIL_FROM=noreply@rdam.gob.ar
 MAIL_USER=rdamcertificados@gmail.com
-MAIL_PASS=wbob sftv fprq tegq
+MAIL_PASS=wbob sftvfprqtegq
 MAIL_FROM=RDAM <rdamcertificados@gmail.com>
