Implement address autocomplete, form validation, and mobile responsiveness

--- a/backend/.env
+++ b/backend/.env
@@ -12,5 +12,5 @@ SMTP_USER=test
 SMTP_PASS=test
 EMAIL_FROM=noreply@rdam.gob.ar
 MAIL_USER=rdamcertificados@gmail.com
-MAIL_PASS=wbob sftvfprqtegq
+MAIL_PASS=wbobsftvfprqtegq
 MAIL_FROM=RDAM <rdamcertificados@gmail.com>
