--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,11 @@
     "start": "node dist/main",
     "start:dev": "nest start --watch",
     "build": "nest build",
-   "start:prod": "node dist/main.js"
-
+    "start:prod": "node dist/main.js",
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
-
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
-
     "prisma:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
